# end-to-end-data-ml-pipeline-for-ecommerce-analytics

./: .gitignore  LICENSE.md  README.md  environment.yml  start_dagster.sh
olist_ecommerce_orchestration/: README.md  pyproject.toml
olist_ecommerce_orchestration/olist_ecommerce/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
olist_ecommerce_orchestration/olist_ecommerce/models/: sources.yml
olist_ecommerce_orchestration/olist_ecommerce/models/marts/core/: dim_customer.sql  dim_customer.yml  dim_date.sql  dim_date.yml  dim_geolocation.sql  dim_geolocation.yml  dim_product.sql  dim_product.yml  dim_seller.sql  dim_seller.yml  fact_orders.sql  fact_orders.yml
olist_ecommerce_orchestration/olist_ecommerce/models/marts/customer_service/: fact_reviews.sql  fact_reviews.yml
olist_ecommerce_orchestration/olist_ecommerce/models/marts/finance/: fact_payments.sql  (+1 more)
olist_ecommerce_orchestration/olist_ecommerce/models/staging/: stg_olist_customers.sql  stg_olist_geolocation.sql  stg_olist_order_items.sql  stg_olist_order_payments.sql  stg_olist_order_reviews.sql  stg_olist_orders.sql  stg_olist_products.sql  stg_olist_sellers.sql
olist_ecommerce_orchestration/olist_ecommerce/snapshots/: dim_customer_snapshot.sql  dim_geolocation_snapshot.sql  dim_product_snapshot.sql  dim_seller_snapshot.sql
olist_ecommerce_orchestration/olist_ecommerce_orchestration/: definitions.py  io_managers.py
olist_ecommerce_orchestration/olist_ecommerce_orchestration/scripts/: bq_upload_batch.py  data_cleaning_utils.py  load_kaggle_dataset.py  move_key_file.py
(+7 files in other folders)
